changed site without

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>11Notify</title>
     <link rel="stylesheet" type="text/css" href="11n.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+
 </head>
 <body>
     <header id="main-header">
-        <img class="resize-logo" src="./11NOTIFY__1_-removebg-preview.png" alt="">
+        <img class="resize-logo" src="./11NOTIFY__1_-removebg-preview.png" alt="11notify logo">
         <a href="https://dashboard.11notify.co.uk/">
             <button class="dash-button">DASHBOARD</button>
         </a>
@@ -26,6 +28,7 @@
             </nav>
         </section>
     </header>
+
     <div class="box">
         <ul>
             <li></li>
@@ -169,7 +172,46 @@
         </div>
     </section> -->
 
- 
+    <section id="main-successpix">
+        <h1 id="success">Some success from our members...</h1>
+        <div class="wrapper">
+            <div class="carousel owl-carousel">
+                <div>
+                    <img class="img-resize" src="./242023803_399057998451009_8205284739463061148_n.jpg" alt="">
+                </div>
+                <div>
+                    <img class="img-resize" src="./287480290_1244184283041232_394171034261733701_n.jpg" alt="">
+                </div>
+                <div>
+                    <img class="img-resize" src="./273523798_315225203900534_3973213248849111358_n.jpg" alt="">
+                </div>
+                <div>
+                    <img class="img-resize" src="./277151711_139755505214623_2763489572969942731_n.jpg" alt="">
+                </div>
+                <div>
+                    <img class="img-resize" src="./289430575_1051769392137293_2316486215775145214_n.jpg" alt="">
+                </div>
+                <div>
+                    <img class="img-resize" src="./289440679_365472925689255_1920966872821111930_n.jpg" alt="">
+                </div>
+                <div>
+                    <img class="img-resize" src="./296107257_626339955875979_3546700920855842810_n.jpg" alt="">
+                </div>
+                <div>
+                    <img class="img-resize" src="./296107257_626339955875979_3546700920855842810_n.jpg" alt="">
+                </div>
+                <div>
+                    <img class="img-resize" src="./296249607_112773381514478_3708743217273701069_n.jpg" alt="">
+                </div>
+                <!-- <div>
+                    <img class="img-resize" src="./185836123_503170517707540_7091793816129184502_n.jpg" alt="">
+                </div>
+                <div>
+                    <img class="img-resize" src="./185836123_503170517707540_7091793816129184502_n.jpg" alt="">
+                </div> --> <!-- add more pictures here !!!!! -->
+            </div>
+        </div>
+
         <div class="box">
             <ul>
                 <li></li>
