--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     <header id="main-header">
         <img class="resize-logo" src="./11NOTIFY__1_-removebg-preview.png" alt="11notify logo">
-        <a href="https://dashboard.11notify.co.uk/">
-            <button class="dash-button">DASHBOARD</button>
+        <a href="https://billing.stripe.com/p/login/00gaHX6cCayNehq3cc">
+            <button class="dash-button">MANAGE BILLING</button>
         </a>
         <section>
             <nav id="menu-bar1">
@@ -107,11 +107,15 @@
             <h1 id="features">Features we provide</h1>
                 <div class="inner-cards">
                     <h3>Monitors</h3>
-                    <p>We have lightning fast monitors, for every site under the sun, our members cop way before the rest on sites like Offspring, Office, End and many more. Our members coop everything from shoes, to PS5s, even GPUs with our rapid monitors. All custom made, so you know it's us when all the stock is gone</p>
+                    <p>We have lightning fast monitors, for every site under the sun, our members cop way before the rest on sites like Offspring, Office, End and many more. Our members cop everything from shoes, to PS5s, even GPUs with our rapid monitors. All custom made, so you know it's us when all the stock is gone</p>
                 </div>
                 <div class="inner-cards">
                     <h3>Instore</h3>
                     <p>Do you ever wonder when your local stores drop sneakers? Well we have the answer to that. We have access to exclusive information about when shoes drop, and where, and you also have access to that information once you join 11Notify, our members check the pings, get to the store, and walk out with profit!</p>
+                </div>
+                <div class="inner-cards">
+                    <h3>Slots</h3>
+                    <p>Sometimes you just want to cop sneakers, without doing anything. We feel the same, that's why we provide ACO and slots to all members, to make sure you hit snekaers on every drop, even when you can't cop yourself!<\p>            
                 </div>
         </section>
     </div>
@@ -132,7 +136,7 @@
             <h1 id="pricing">Pricing</h1>
             <div class="inner-cards">
                 <h3>Monthly</h3>
-                <h4>£20 a month<br>Most competitive price for the highest quality cookgroup!</h4>
+                <h4>£25 a month<br>Most competitive price for the highest quality cookgroup!</h4>
                 <a href="https://buy.stripe.com/28oaFfcEhcbv0xOdQR">
                     <button type="submit" class="joincards-button">JOIN NOW</button>
                 </a>
@@ -140,7 +144,7 @@
             <div class="inner-cards">
                 <h3>Bi-Annually</h3>
                 <h4>Pay for 5 months of membership<br>Get the 6th month free!</br></h4>
-                <a href="https://buy.stripe.com/7sIfZzcEh6Rb6WcaEH">
+                <a href="https://buy.stripe.com/28o7t30Vza3na8obIP">
                     <button type="submit" class="joincards-button">JOIN NOW</button>
                 </a>
             </div>
