updated slots text

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="inner-cards">
                     <h3>Slots</h3>
-                    <p>Sometimes you just want to cop sneakers, without doing anything. We feel the same, that's why we provide ACO and slots to all members, to make sure you hit snekaers on every drop, even when you can't cop yourself!<\p>            
+                    <p>Sometimes you just want to cop sneakers, without doing anything. We feel the same, that's why we provide ACO and slots to all members, to make sure you hit snekaers on every drop, even when you can't cop yourself! We'll do all the work for you and you can enjoy having every release turn up at your doorstep every single drop!<\p>            
                 </div>
         </section>
     </div>
